# pp

./: .gitignore  Makefile  README.md  package.yaml  pp-darwin-x86_64.txz.REMOVED.git-id  pp.cabal  stack.yaml  tag.sh
app/: pp.hs
doc/: dpp.html  gpp.html  pp.css  pp.html  pp.md
doc/img/: dpp-design.txt  dpp-design2.txt  dpp-ditaa-example.txt  dpp-generators.txt  dpp-graphviz-example.txt  dpp-pipe1.txt  dpp-pipe2.txt  dpp-plantuml-example.txt  dpp-scripts.txt  dpp-syntax.txt  pp-asy-example.asy  pp-asy-example.gv  pp-blockdiag-example.diag  pp-ditaa-example.gv  pp-ditaa-example.txt  pp-generators.dot  pp-generators.gv  pp-graphviz-example.gv  pp-mermaid-example.mmd  pp-plantuml-example.gv  pp-scripts.dot  pp-scripts.gv  pp-syntax.gv  rplot-test.gv  rplot-test.r
src/: CSV.hs  Environment.hs  ErrorMessages.hs  Expr.hs  Formats.hs  Localization.hs  OSAbstraction.hs  Preprocessor.hs  UTF8.hs  Version.hs  dpp.c  dpp.md  pp.hs  pp.md
test/: Spec.hs  formats.md  pp-test-lib.i  pp-test-rst.ref  pp-test.d.ref  pp-test.i  pp-test.md  pp-test.ref  pp-test.rst
test/subdir/: mustache.json  mustache.yaml  pp-test-lib.i  pp-test.i
tools/: blob.hs  osInfo
