name:                pp
version:             1.9.3
synopsis:            Generic Preprocessor (for Pandoc)
description:         text preprocessor designed for Pandoc (and more generally Markdown and reStructuredText)
homepage:            https://github.com/CDSoft/pp#readme
license:             GPL-3
license-file:        LICENSE
author:              Christophe Delord
maintainer:          cdsoft.fr
copyright:           2015, 2016, 2017
category:            Preprocessor
build-type:          Simple
extra-source-files:  README.md
                   , tag.sh
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Environment
                     , ErrorMessages
                     , Localization
                     , OSAbstraction
                     , Preprocessor
                     , CSV
                     , Tag
                     , UTF8
                     , Version
  c-sources:           .stack-work/plantuml.c
  include-dirs:        .stack-work
  other-extensions:    CPP
                     , ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
                     , strict
                     , process
                     , time
                     , temporary
                     , directory
                     , filepath
                     , spreadsheet
                     , explicit-exception
                     , split
  default-language:    Haskell2010

executable pp
  hs-source-dirs:      app
  main-is:             pp.hs
  ghc-options:         -Wall -Werror -O3 -fwarn-unused-do-bind
  build-depends:       base
                     , pp
  default-language:    Haskell2010

test-suite pp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pp
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CDSoft/pp
